--- a/packages/amplication-client/src/Project/ProjectPage.scss
+++ b/packages/amplication-client/src/Project/ProjectPage.scss
@@ -14,6 +14,7 @@
     border: 1px solid var(--black5);
     border-radius: var(--small-border-radius);
     height: 100%;
+    max-height: 820px;
   }
 
   &__content {
