--- a/packages/amplication-client/src/Layout/InnerTabLink.scss
+++ b/packages/amplication-client/src/Layout/InnerTabLink.scss
@@ -18,6 +18,10 @@
     margin-right: var(--default-spacing-small);
   }
 
+  &:last-child {
+    margin-bottom: 0;
+  }
+
   &:hover {
     @include active-link;
   }
