--- a/packages/amplication-client/src/Workspaces/WorkspaceSelector.scss
+++ b/packages/amplication-client/src/Workspaces/WorkspaceSelector.scss
@@ -1,21 +1,14 @@
 @import "../style/index.scss";
 
 @mixin workspaceItem {
-  @include sectionTitle;
-  margin-bottom: 0;
-  padding: var(--default-spacing-small);
-  border-radius: var(--default-border-radius);
-  cursor: pointer;
-  white-space: nowrap;
-  overflow: hidden;
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  box-sizing: border-box;
   display: flex;
   flex-direction: row;
-  align-items: center;
   justify-content: flex-start;
+  align-items: center;
+  cursor: pointer;
+  padding: var(--default-spacing);
+  gap: 4px;
+  width: 100%;
 
   .circle-badge {
     margin-left: 0;
@@ -24,7 +17,6 @@
 
   &__name {
     @include regular-12;
-    font-size: 12px;
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
@@ -43,17 +35,17 @@
 }
 
 .workspaces-selector {
+  position: relative;
   box-sizing: border-box;
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: var(--default-spacing);
-  gap: var(--default-spacing-small);
-  height: var(--header-height);
-  border: 1px solid #2c3249;
-  border-radius: var(--default-spacing-small);
+  background-color: var(--surface);
+  border: 1px solid var(--black5);
+  border-top-left-radius: var(--default-spacing-small);
+  border-top-right-radius: var(--default-spacing-small);
   width: 100%;
-  margin-bottom: var(--default-spacing-small);
+  margin-bottom: 16px;
 
   &__current {
     @include workspaceItem;
@@ -64,20 +56,58 @@
   }
 
   &__list {
-    padding: var(--default-spacing-small);
-    border: $border-black20;
-    border-radius: var(--default-border-radius);
+    position: absolute;
+    top: 57px;
+    left: -1px;
+    width: calc(100% - 24px);
+    border: 1px solid var(--black30);
+    border-bottom-left-radius: var(--default-spacing-small);
+    border-bottom-right-radius: var(--default-spacing-small);
+    background-color: var(--black2);
+    width: 100%;
+    z-index: 1;
 
     &__item {
       @include workspaceItem;
-      @include title1;
-      margin-bottom: var(--default-spacing-small);
+      width: calc(100% - 24px);
+      margin-bottom: 4px;
+      &__icon {
+        color: #31c587;
+      }
+    }
+
+    &__item:hover {
+      background-color: var(--black10);
+    }
+
+    &__button {
+      margin-left: 12px;
+      margin-top: 10px;
     }
 
     &__new {
-      margin-top: var(--default-spacing);
-      border-top: $border-black20;
-      padding-top: var(--default-spacing);
+      height: 72px;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+    }
+    &__divider {
+      width: calc(100% - 24px);
+      border: 1px solid var(--black30);
     }
   }
+}
+
+.workspaces-selector:hover {
+  background-color: var(--black2);
+  border: 1px solid var(--black30);
+}
+
+.workspaces-selector-close {
+  border-bottom-left-radius: var(--default-spacing-small);
+  border-bottom-right-radius: var(--default-spacing-small);
+}
+.workspaces-selector-open {
+  background-color: var(--black2);
+  border: 1px solid var(--black30);
 }
