--- a/packages/amplication-client/src/style/parameters.scss
+++ b/packages/amplication-client/src/style/parameters.scss
@@ -5,6 +5,7 @@ $border-black20: 1px solid var(--black20);
 $border-primary: 1px solid var(--primary);
 $border-black30: 1px solid var(--black30);
 $border-black90: 1px solid var(--black90);
+$border-black80: 1px solid var(--black80);
 $border-white-transparent: 1px solid rgba(255, 255, 255, 0.2);
 
 $default-scroll-width: 8px;
