--- a/packages/amplication-client/src/Workspaces/WorkspaceHeader.scss
+++ b/packages/amplication-client/src/Workspaces/WorkspaceHeader.scss
@@ -4,5 +4,96 @@
   height: var(--header-height);
   display: flex;
   background: var(--black2);
-  border-bottom: 1px solid var(--black5);
+  border-bottom: $border-black5;
+  align-items: center;
+
+  &__logo {
+    width: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-right: $border-black70;
+
+    i {
+      width: var(--double-spacing);
+      height: var(--double-spacing);
+    }
+  }
+  &__breadcrumbs {
+    flex-grow: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    &__project {
+      @include regular-12();
+      color: var(--black80);
+      margin-right: var(--default-spacing);
+    }
+    &__resource {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-left: var(--default-spacing);
+      .select-menu__modal > div {
+        border: none;
+        width: 220px;
+        display: flex;
+        flex-direction: column;
+      }
+      &__title {
+        @include regular-12();
+
+        &__not_selected {
+          @include regular-12();
+          color: var(--black80);
+        }
+      }
+      &__item {
+        margin-left: var(--text-field-label-font-size);
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+      }
+      &__text {
+        margin-left: var(--default-spacing-small);
+        @include regular-12();
+        &__desc {
+          color: var(--black80);
+        }
+      }
+    }
+  }
+  &__links {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    &__link {
+      @include regular-12();
+      color: var(--black80);
+      margin: 0px;
+      margin-right: var(--large-spacing);
+    }
+  }
+  &__search {
+    width: 52px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+  }
+  &__user {
+    width: 64px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  &__vertical_border {
+    width: 0px;
+    height: var(--large-spacing);
+    border: $border-black70;
+  }
+  &__resources_modal {
+    top: 30px;
+  }
 }
