--- a/packages/amplication-client/src/Workspaces/WorkspaceHeader.scss
+++ b/packages/amplication-client/src/Workspaces/WorkspaceHeader.scss
@@ -1,5 +1,11 @@
 @import "../style/index.scss";
 
+$logo-header-width: 50px;
+$search-header-width: 52px;
+$user-header-width: 64px;
+$modal-menu-width: 220px;
+$modal-menu-top: 30px;
+
 .workspace-header {
   height: var(--header-height);
   display: flex;
@@ -8,7 +14,7 @@
   align-items: center;
 
   &__logo {
-    width: 50px;
+    width: $logo-header-width;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -34,11 +40,30 @@
       justify-content: center;
       align-items: center;
       margin-left: var(--default-spacing);
+      .select-menu__modal {
+        width: $modal-menu-width;
+        background-color: var(--black2);
+        border: $border-black30;
+        box-shadow: 0px 18px 28px -8px rgba(9, 11, 20, 0.6);
+        border-radius: var(--default-spacing-small);
+        right: 45%;
+      }
       .select-menu__modal > div {
         border: none;
-        width: 220px;
+        width: $modal-menu-width;
         display: flex;
         flex-direction: column;
+      }
+      .select-menu__list {
+        width: $modal-menu-width;
+        display: flex;
+        padding: 5px 0px;
+        flex-direction: column;
+        border: none;
+      }
+      .select-menu__item {
+        padding: 5px;
+        margin-bottom: var(--icon-spacing);
       }
       &__title {
         @include regular-12();
@@ -76,17 +101,18 @@
     }
   }
   &__search {
-    width: 52px;
+    width: $search-header-width;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
   }
   &__user {
-    width: 64px;
+    width: $user-header-width;
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
   }
   &__vertical_border {
     width: 0px;
@@ -94,6 +120,6 @@
     border: $border-black70;
   }
   &__resources_modal {
-    top: 30px;
+    top: $modal-menu-top;
   }
 }
