remove redundant class wrapper

--- a/packages/amplication-client/src/Workspaces/WorkspaceLayout.scss
+++ b/packages/amplication-client/src/Workspaces/WorkspaceLayout.scss
@@ -18,7 +18,8 @@
   }
 
   &__changes_menu {
-  width: var(--changes-menu-width);
-  background: var(--menu-background-color);
+    width: var(--changes-menu-width);
+    background: var(--menu-background-color);
+    border-left: $border-black10;
   }
 }
