--- a/packages/amplication-client/src/Resource/create-resource/CreateServiceWizard.scss
+++ b/packages/amplication-client/src/Resource/create-resource/CreateServiceWizard.scss
@@ -27,6 +27,7 @@ $max-width: 700px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background: var(--surface);
   }
   &__description {
     display: flex;
@@ -34,7 +35,7 @@ $max-width: 700px;
     justify-content: center;
     align-items: center;
     width: 66%;
-    
+
     .circle-badge i {
       color: var(--black5);
     }
@@ -81,8 +82,9 @@ $max-width: 700px;
     justify-content: center;
     width: 100%;
     height: 100%;
-    max-width: $max-width;
     margin: auto;
+    color: var(--black100);
+    background: var(--black2);
 
     &__title {
       @include headline1;
