style(client):disable hover for menu items

--- a/packages/amplication-client/src/Layout/MenuItem.scss
+++ b/packages/amplication-client/src/Layout/MenuItem.scss
@@ -67,6 +67,10 @@ $inverted-border-radius: 6px;
     left: calc(50% - #{$select-item-width * 0.5});
   }
 
+  &--no-hover:before {
+    display: none;
+  }
+
   &--with-fixed-panel {
     &:before,
     &:hover:before {
