fix(client):modal input width

--- a/packages/amplication-client/src/style/mixin.scss
+++ b/packages/amplication-client/src/style/mixin.scss
@@ -292,6 +292,12 @@ $bullet-size: 6px;
     text-align: center;
   }
 
+  .text-input {
+    input {
+      max-width: none;
+    }
+  }
+
   form {
     width: 100%;
   }
