--- a/packages/amplication-client/src/Project/ProjectPage.scss
+++ b/packages/amplication-client/src/Project/ProjectPage.scss
@@ -4,20 +4,19 @@
   display: flex;
   height: 100%;
   flex: 1 auto;
+  // &__sidebar {
+  //   padding: var(--large-spacing);
+  // }
 
-  &__sidebar {
-    padding: var(--large-spacing);
-  }
+  // &__sidebar-content {
+  //   border: var(--border-black5);
+  //   border-radius: var(--small-border-radius);
+  //   display: flex;
+  //   height: 100%;
+  // }
 
-  &__sidebar-content {
-    border: var(--border-black5);
-    border-radius: var(--small-border-radius);
-    display: flex;
-    height: 100%;
-  }
-
-  &__content {
-    width: 100%;
-    padding: var(--large-spacing);
-  }
+  // &__content {
+  //   width: 100%;
+  //   padding: var(--large-spacing);
+  // }
 }
