--- a/packages/amplication-client/src/Project/ProjectSideBar.scss
+++ b/packages/amplication-client/src/Project/ProjectSideBar.scss
@@ -2,10 +2,10 @@
 
 .project-sidebar {
   @include flexColumn;
-  padding: var(--large-spacing);
-  border: $border-black70;
-  border-radius: var(--default-spacing-small);
-  width: 256px;
+  // padding: var(--large-spacing);
+  // border: $border-black70;
+  // border-radius: var(--default-spacing-small);
+  // width: 256px;
 
   &__project-wrapper {
     flex-grow: 1;
