--- a/packages/amplication-design-system/src/components/CircleBadge/CircleBadge.scss
+++ b/packages/amplication-design-system/src/components/CircleBadge/CircleBadge.scss
@@ -17,60 +17,60 @@
 }
 
 .xxsmall {
-  width: 16px;
-  height: 16px;
+  width: var(--icon-size-xxsmall);
+  height: var(--icon-size-xxsmall);
   .amp-icon {
     color: var(--black2);
-    font-size: 12px;
+    font-size: var(--text-field-label-font-size);
   }
 }
 
 .xsmall {
-  width: 20px;
-  height: 20px;
+  width: var(--icon-size-xsmall);
+  height: var(--icon-size-xsmall);
   .amp-icon {
     color: var(--black2);
-    font-size: 12px;
+    font-size: var(--text-field-label-font-size);
   }
 }
 
 .small {
-  width: var(--double-spacing);
-  height: var(--double-spacing);
+  width: var(--icon-size-small);
+  height: var(--icon-size-small);
   .amp-icon {
     color: var(--black2);
-    font-size: 12px;
+    font-size: var(--title3-font-size);
   }
 }
 .medium {
-  width: var(--menu-item-width);
-  height: var(--menu-item-width);
+  width: var(--icon-size-medium);
+  height: var(--icon-size-medium);
   .amp-icon {
     color: var(--black2);
-    font-size: 12px;
+    font-size: var(--title3-font-size);
   }
 }
 .large {
-  width: 44px;
-  height: 44px;
+  width: var(--icon-size-large);
+  height: var(--icon-size-large);
   .amp-icon {
     color: var(--black2);
-    font-size: 20px;
+    font-size: var(--large-icon-font-size);
   }
 }
 .xlarge {
-  width: 54px;
-  height: 54px;
+  width: var(--icon-size-xlarge);
+  height: var(--icon-size-xlarge);
   .amp-icon {
     color: var(--black2);
-    font-size: 24px;
+    font-size: var(--title4-font-size);
   }
 }
 .xxlarge {
-  width: 64px;
-  height: 64px;
+  width: var(--icon-size-xxlarge);
+  height: var(--icon-size-xxlarge);
   .amp-icon {
     color: var(--black2);
-    font-size: 32px;
+    font-size: var(--title4-font-size);
   }
 }
