feat(client) last commit wip

--- a/packages/amplication-client/src/VersionControl/PendingChanges.scss
+++ b/packages/amplication-client/src/VersionControl/PendingChanges.scss
@@ -7,7 +7,7 @@ $counter-height: 18px;
   padding: var(--default-spacing);
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: calc(100% - 200px);
 
   &__divider {
     border: 1px solid var(--black5);
@@ -85,7 +85,6 @@ $counter-height: 18px;
     padding: var(--default-spacing);
     border-radius: var(--small-border-radius);
     height: 100%;
-    margin-bottom: var(--double-spacing);
   }
 
   &__changes {
