--- a/packages/amplication-client/src/Resource/git/ProjectConfigurationGitSettings.scss
+++ b/packages/amplication-client/src/Resource/git/ProjectConfigurationGitSettings.scss
@@ -1,68 +1,103 @@
 @import "../../style/index.scss";
 
 .project-configuration-github-settings {
-  margin: var(--double-spacing) 0;
-  min-height: var(--min-height-of-banner);
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 24px;
+  width: 1078px;
+  height: 475px;
+  margin: var(--double-spacing) 0;
+
   &__link {
-    color: aqua;
     text-decoration: underline;
   }
 
+  &__inherit_color {
+    color: var(--dark-secondary-turquoise);
+  }
+
+  &__disabled_color {
+    color: var(--black40);
+  }
+
   &__settingsLink {
-    padding: 1rem;
+    margin: var(--default-spacing) calc(var(--default-spacing) * -1);
     display: flex;
-    flex: 1;
     justify-content: space-between;
+    width: 400px;
+  }
+
+  &__panelWarper {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 8px;
+    width: 1078px;
+    height: 98px;
   }
 
   &__gitStatusPanel {
-    left: 16px;
+    width: 1077px;
+    height: 72px;
+    border: 1px solid #444b66;
+    background: #2C3249;
+  }
+
+  &__overrideGitStatusPanel {
+    border: 1px solid #444b66;
+    display: flex;
+    flex-direction: row;
+    width: 1077px;
+    height: 72px;
   }
 
   &__gitSettingsPanel {
-    height: 293px;
-    top: 114px;
+    padding: 12px 16px;
+    gap: 12px;
+    width: 1078px;
+    background: #2c3249;
     border-radius: 8px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    padding: 12px 16px;
-    gap: 12px;
     background: #2c3249;
-    order: 1;
-    align-self: stretch;
+    border-radius: 8px;
+  }
+
+  &__githubSync {
+    color: var(--black40);
   }
 
   &__gitSettingsFromProject {
+    width: 1077px;
+    height: 72px;
     border: 1px solid var(--black10);
     border-radius: var(--default-border-radius);
     box-sizing: border-box;
     padding: 12px 16px;
-    height: 100px;
+  }
+
+  &__toggle {
+    left: 829px;
   }
 
   &__defaultSettings {
     font-size: 14px;
-    justify-content: space-between;
     align-items: center;
     padding: 13px 0px;
-    gap: 922px;
-    height: 48px;
+    display: flex;
+    flex-direction: row;
+  }
 
-    &__toggle {
-      order: 1;
-      width: 30px;
-      left: 1180px;
-    }
+  &__AuthWithGit{
+      width: 100%;
+  }
 
-    hr {
+  hr {
     border: none;
     border-top: 1px solid var(--black10);
     margin-top: var(--double-spacing);
     margin-bottom: var(--double-spacing);
-    width: 1500px;
-    }
   }
 }
