--- a/packages/amplication-design-system/src/style/css-variables.scss
+++ b/packages/amplication-design-system/src/style/css-variables.scss
@@ -77,7 +77,8 @@
   --icon-spacing: 4px;
   --default-spacing: 12px;
   --default-spacing-small: 8px;
-  --large-spacing: 14px;
+  --medium-spacing: 14px;
+  --large-spacing: 16px;
   --double-spacing: 24px;
   --triple-spacing: 36px;
   --form-field-spacing: 16px;
