--- a/packages/amplication-client/src/VersionControl/LastCommit.scss
+++ b/packages/amplication-client/src/VersionControl/LastCommit.scss
@@ -15,6 +15,13 @@
 
   &__skeleton {
     margin: var(--form-field-spacing) 0;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+
+    .clickable-id {
+      margin: 0 var(--icon-spacing);
+    }
   }
 
   &__content {
