--- a/packages/amplication-client/src/Resource/git/ProjectConfigurationGitSettings.scss
+++ b/packages/amplication-client/src/Resource/git/ProjectConfigurationGitSettings.scss
@@ -1,6 +1,8 @@
 @import "../../style/index.scss";
 
 .project-configuration-github-settings {
+  width: 100%;
+
   &__link {
     text-decoration: underline;
   }
@@ -20,11 +22,11 @@
   }
 
   &__gitStatusPanel {
-    width: 1077px;
+    width: 100%;
     height: 72px;
     border: 1px solid var(--black20);
     background: var(--black5);
-    margin: var(--double-spacing) 0;
+    margin: 8px 0;
     min-height: var(--min-height-of-banner);
     display: flex;
   }
@@ -33,9 +35,9 @@
     border: 1px solid var(--black20);
     display: flex;
     flex-direction: row;
-    width: 1077px;
+    width: 100%;
     height: 72px;
-    margin: var(--double-spacing) 0;
+    margin: 8px 0;
   }
 
   &__githubSync {
