--- a/packages/amplication-client/src/Resource/git/ServiceConfigurationGitSettings.scss
+++ b/packages/amplication-client/src/Resource/git/ServiceConfigurationGitSettings.scss
@@ -1,44 +1,43 @@
 @import "../../style/index.scss";
 
 .service-configuration-github-settings {
- 
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   gap: 24px;
-  width: 1078px;
+  width: 100%;
   height: 475px;
   margin: var(--double-spacing) 0;
-
 
   &__panelWarper {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     gap: 8px;
-    width: 1078px;
+    width: 100%;
     height: 98px;
   }
 
   &__gitSettingsPanel {
     padding: 12px 16px;
     gap: 12px;
-    width: 1078px;
+    width: 100%;
     background: var(--black5);
     border-radius: var(--default-border-radius);
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    margin: 8px 0;
     background: var(--black5);
     border-radius: 8px;
-    margin: var(--double-spacing) 0;
+    transition-timing-function: ease-in(0.35); //not working from here
   }
 
   &__gitSettingsFromProject {
-    width: 1077px;
+    width: 100%;
     height: 72px;
     border: 1px solid var(--black10);
-    margin: var(--double-spacing) 0;
+    margin: 8px 0;
     min-height: var(--min-height-of-banner);
     display: flex;
   }
@@ -49,14 +48,15 @@
 
   &__defaultSettings {
     font-size: 14px;
-    align-items: center;
     padding: 13px 0px;
     display: flex;
-    flex-direction: row;
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
   }
 
-  &__AuthWithGit{
-      width: 100%;
+  &__AuthWithGit {
+    width: 100%;
   }
 
   hr {
