--- a/packages/amplication-client/src/style/mixin.scss
+++ b/packages/amplication-client/src/style/mixin.scss
@@ -149,6 +149,25 @@ $bullet-size: 6px;
   }
 }
 
+//Merge two mixins
+@mixin flexFullRowWithSpacingBothSides {
+  @include flexFullRow();
+  .spacer {
+    flex: 1;
+  }
+  > * {
+    margin-left: var(--default-spacing);
+    &:first-child {
+      margin-left: 0;
+    }
+
+    margin-right: var(--default-spacing);
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+}
+
 @mixin highlightPanel {
   background-color: var(--theme-turquoise-transparent);
   border: 1px solid var(--theme-turquoise);
