--- a/packages/amplication-client/src/style/mixin.scss
+++ b/packages/amplication-client/src/style/mixin.scss
@@ -309,7 +309,7 @@ $bullet-size: 6px;
     width: 100%;
   }
   .amp-button {
-    margin-top: var(--double-spacing);
+    margin-top: var(--large-spacing);
     margin-bottom: 0;
     width: 100%;
   }
