--- a/packages/amplication-design-system/src/components/Dialog/Dialog.scss
+++ b/packages/amplication-design-system/src/components/Dialog/Dialog.scss
@@ -1,6 +1,5 @@
 @import "../../style/index.scss";
 
-$modal-header-height: 42px;
 $modal-max-width: 50vw;
 $modal-top-position: 20vh;
 
@@ -13,6 +12,7 @@ $modal-top-position: 20vh;
   margin-top: $modal-top-position !important;
   margin-bottom: 0 !important;
   background-color: var(--black2) !important;
+  padding: var(--double-spacing);
 
   //mobile
   @media only screen and (max-width: $breakpoint-tablet) {
@@ -29,9 +29,7 @@ $modal-top-position: 20vh;
     @include semiBold;
     color: var(--black100);
     background-color: transparent;
-    height: $modal-header-height;
     box-sizing: border-box;
-    padding: var(--default-spacing) var(--large-spacing);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -40,13 +38,13 @@ $modal-top-position: 20vh;
 
     h3 {
       margin: 0;
-      color: var(--black80);
+      font-weight: 600;
+      font-size: var(--title3-font-size);
     }
   }
   & &__body {
     background-color: transparent;
     box-sizing: border-box;
-    padding: var(--large-spacing);
   }
 
   &--warning {
