--- a/packages/amplication-client/src/Resource/git/GitActions/RepositoryActions/RepositoryActions.scss
+++ b/packages/amplication-client/src/Resource/git/GitActions/RepositoryActions/RepositoryActions.scss
@@ -9,6 +9,7 @@
     margin: var(--double-spacing) 0;
     min-height: var(--min-height-of-banner);
     display: flex;
+    background: var(--black10);
   }
   &__action {
     margin-left: var(--default-spacing-small);
