--- a/packages/amplication-client/src/Resource/git/GitActions/ExistingConnectionsMenu.scss
+++ b/packages/amplication-client/src/Resource/git/GitActions/ExistingConnectionsMenu.scss
@@ -1,27 +1,44 @@
 @import "../../../style/index.scss";
 
 .git-organization-select-menu {
+  &__select-menu {
+    background: var(--black2);
+  }
   &__menu {
     margin-left: 0 !important;
-  }
-  &__hr {
-    background-color: var(--black2);
-    border-bottom: none;
-    width: 100%;
-    display: flex;
+    box-sizing: border-box;
+    padding: 0px 12px;
+    gap: 8px;
+    width: 248px;
+    height: 28px;
+    background: #2c3249;
+    border: 1px solid #444b66;
+    border-radius: 4px;
 
-    hr {
-      border: none;
-      border-top: $border-black10;
-      margin-left: var(--default-spacing-small);
-      margin-right: var(--default-spacing-small);
-      background-color: var(--black2);
-      display: flex;
-      width: 100%;
+    .amp-button.amp-button--text {
+      height: 28px;
     }
-  }
-  &__add-icon {
-    position: absolute;
-    margin-right: var(--double-spacing);
+
+    &__hr {
+      background-color: var(--black2);
+      border-bottom: none;
+      width: 100%;
+      display: flex;
+      border-top: $border-black10;
+
+      hr {
+        border: none;
+        border-top: $border-black10;
+        margin-left: var(--default-spacing-small);
+        margin-right: var(--default-spacing-small);
+        background-color: var(--black2);
+        display: flex;
+        width: 100%;
+      }
+    }
+    &__add-icon {
+      position: absolute;
+      margin-right: var(--double-spacing);
+    }
   }
 }
