--- a/packages/amplication-client/src/Resource/git/SyncWithGithubPage.scss
+++ b/packages/amplication-client/src/Resource/git/SyncWithGithubPage.scss
@@ -4,7 +4,6 @@ $max-width: 700px;
 $icon-font-size: 40px;
 
 .sync-with-github-page {
-  
   &__header {
     display: flex;
     align-items: center;
@@ -17,6 +16,7 @@ $icon-font-size: 40px;
 
   &__message {
     @include body1;
+    font-size: 14px;
     color: var(--black);
     line-height: 1.5;
     margin-bottom: var(--default-spacing);
