--- a/packages/amplication-client/src/Project/ProjectSideBar.scss
+++ b/packages/amplication-client/src/Project/ProjectSideBar.scss
@@ -10,6 +10,7 @@
   }
   &__label {
     @include regular-12;
+    margin-top: 0;
     margin-bottom: var(--default-spacing-small);
     color: var(--black80);
   }
