--- a/packages/amplication-client/src/Components/BuildSelectorItem.scss
+++ b/packages/amplication-client/src/Components/BuildSelectorItem.scss
@@ -19,6 +19,19 @@
     font-size: 12px;
   }
 
+  .title_2 {
+    display: flex;
+    max-width: 185px;
+    width: 185px;
+    white-space: nowrap;
+    text-align: left;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-weight: 400;
+    font-size: 12px;
+    justify-content: space-between;
+  }
+
   .title-list {
     max-width: 180px;
     font-size: 12px;
