fix(client): resource list

--- a/packages/amplication-design-system/src/components/CircleBadge/CircleBadge.scss
+++ b/packages/amplication-design-system/src/components/CircleBadge/CircleBadge.scss
@@ -47,7 +47,7 @@
   height: var(--menu-item-width);
   .amp-icon {
     color: var(--black2);
-    font-size: 12px;
+    // font-size: 12px;
   }
 }
 .large {
