--- a/packages/amplication-design-system/src/components/UserAvatar/UserAvatar.scss
+++ b/packages/amplication-design-system/src/components/UserAvatar/UserAvatar.scss
@@ -1,10 +1,8 @@
 @import "../../style/index.scss";
 .user-avatar {
-  height: var(--menu-item-width);
-  margin: 0;
-  padding: 0;
+  height: var(--small-menu-item-height);
   position: relative;
-  width: var(--menu-item-width);
+  width: var(--small-menu-item-width);
 
   & &__initials {
     box-sizing: border-box;
@@ -14,9 +12,9 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    height: var(--menu-item-width);
+    height: var(--small-menu-item-height);
     text-align: center;
-    width: var(--menu-item-width);
+    width: var(--small-menu-item-width);
     color: var(--static-white);
     font-size: var(--title2-font-size);
     text-transform: capitalize;
