--- a/packages/amplication-design-system/src/style/css-variables.scss
+++ b/packages/amplication-design-system/src/style/css-variables.scss
@@ -89,6 +89,8 @@
   --menu-width-expanded: 230px;
   --menu-item-width: 32px;
   --menu-item-height: var(--menu-item-width);
+  --small-menu-item-width: 20px;
+  --small-menu-item-height: var(--small-menu-item-width);
   --menu-expand-animation-duration: 0.2s;
 
   --menu-item-color: #b7bac7;
