--- a/packages/amplication-client/src/Workspaces/WorkspaceHeader.scss
+++ b/packages/amplication-client/src/Workspaces/WorkspaceHeader.scss
@@ -32,8 +32,7 @@ $modal-menu-top: 30px;
       color: var(--black80);
       margin-right: var(--default-spacing);
 
-      &.highlight,
-      &:hover {
+      &.highlight {
         a {
           color: var(--black100);
         }
@@ -44,16 +43,6 @@ $modal-menu-top: 30px;
       justify-content: center;
       align-items: center;
       margin-left: var(--default-spacing);
-      
-      .select-menu__summary.amp-button.amp-button--text {
-        color: var(--black80);
-        &.highlight,
-        &:hover,
-        &:focus,
-        &:active {
-          color: var(--black100);
-        }
-      }
       .select-menu__modal {
         width: $modal-menu-width;
         background-color: var(--black2);
@@ -78,6 +67,14 @@ $modal-menu-top: 30px;
       .select-menu__item {
         padding: 5px;
         margin-bottom: var(--icon-spacing);
+      }
+      &__title {
+        @include regular-12();
+        color: var(--black80);
+
+        &.highlight {
+          color: var(--black100);
+        }
       }
       &__item {
         margin-left: var(--text-field-label-font-size);
