added button min width as var

--- a/packages/amplication-client/src/Workspaces/WorkspaceSelector.scss
+++ b/packages/amplication-client/src/Workspaces/WorkspaceSelector.scss
@@ -50,7 +50,7 @@
     @include workspaceItem;
 
     .amp-button {
-      min-width: 16px;
+      min-width: var(--button-min-width);
 
       .amp-icon {
         margin: 0;
