--- a/packages/amplication-design-system/src/style/css-variables.scss
+++ b/packages/amplication-design-system/src/style/css-variables.scss
@@ -81,6 +81,7 @@
   --textarea-height: 130px;
 
   --modal-min-width: 400px;
+  --button-min-width: 16px;
 
   --header-height: 50px;
   --footer-height: 35px;
