feat(client) finish commit page

--- a/packages/amplication-client/src/VersionControl/CommitListItem.scss
+++ b/packages/amplication-client/src/VersionControl/CommitListItem.scss
@@ -12,6 +12,16 @@
     flex-direction: column;
     width: 130px;
     padding: 0 10px;
+
+    &__message {
+      @include body2;
+      color: var(--black100);
+    }
+
+    &__created {
+      @include regular-10;
+      color: var(--black80);
+    }
   }
 
   &__row {
